force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <description>Organization information, Sales/Service Center, Exhibition hall / test drive center / delivery center, etc.

Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-964
Purpose :- After Sales service available of Customer.</description>
    <label>Department</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>