force-app/main/default/objects/Department__c/fields/AccountHolder__c.field-meta.xml
<CustomField>
    <fullName>AccountHolder__c</fullName>
    <label>Account Holder</label>
    <length>60</length>
    <type>Text</type>
</CustomField>