force-app/main/default/objects/Department__c/fields/AdditionalVehicleOccupationHoursStar__c.field-meta.xml
<CustomField>
    <fullName>AdditionalVehicleOccupationHoursStar__c</fullName>
    <label>Additional Vehicle Occupation Hours Star</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>