force-app/main/default/objects/Department__c/fields/Aftersales_region__c.field-meta.xml
<CustomField>
    <fullName>Aftersales_region__c</fullName>
    <label>Aftersales Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>