force-app/main/default/objects/Department__c/fields/Available_Services__c.field-meta.xml
<CustomField>
    <fullName>Available_Services__c</fullName>
    <label>Available Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Repair incl. Diagnosis and Warranty</fullName>
            </value>
            <value>
                <fullName>Body &amp; Paint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>