force-app/main/default/objects/Department__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <label>Bank Address</label>
    <type>TextArea</type>
</CustomField>