force-app/main/default/objects/Department__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <label>Bank Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>