force-app/main/default/objects/Department__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <label>Code Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>