force-app/main/default/objects/Department__c/fields/Contact_person_NSC_Creator__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_NSC_Creator__c</fullName>
    <label>Contact Person NSC/Creator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>