force-app/main/default/objects/Department__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <description>Created By: Mayank Pant
Created Date: 23rd Oct 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1238
Purpose:</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>