force-app/main/default/objects/Department__c/fields/CPO__c.field-meta.xml
<CustomField>
    <fullName>CPO__c</fullName>
    <label>CPO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>