force-app/main/default/objects/Department__c/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <label>Dealer Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>