force-app/main/default/objects/Department__c/fields/DealerType__c.field-meta.xml
<CustomField>
    <fullName>DealerType__c</fullName>
    <label>Dealer Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>