force-app/main/default/objects/Department__c/fields/DefaultPriceBook__c.field-meta.xml
<CustomField>
    <fullName>DefaultPriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>