force-app/main/default/objects/Department__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 10th Nov 2020
Purpose: This field will store the dealer code for the department</description>
    <label>Department Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>