force-app/main/default/objects/Department__c/fields/Department_Manager__c.field-meta.xml
<CustomField>
    <fullName>Department_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-2375 , created by :- Riddhi mittal, on 2/17/2021</description>
    <label>Department Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Role__c</field>
            <operation>contains</operation>
            <value>Department Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Departments (Department Manager)</relationshipLabel>
    <relationshipName>Department_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>