force-app/main/default/objects/Department__c/fields/Department_Owner__c.field-meta.xml
<CustomField>
    <fullName>Department_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>