force-app/main/default/objects/Department__c/fields/Department_Public_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Department_Public_Group_Id__c</fullName>
    <label>Department Public Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>