force-app/main/default/objects/Department__c/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <label>Department Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales+Service</fullName>
            </value>
            <value>
                <fullName>GOC (Genesis operation center)</fullName>
            </value>
            <value>
                <fullName>GFT (Genesis fast track)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>