force-app/main/default/objects/Department__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <label>Directions</label>
    <type>TextArea</type>
</CustomField>