force-app/main/default/objects/Department__c/fields/GDPRLegal__c.field-meta.xml
<CustomField>
    <fullName>GDPRLegal__c</fullName>
    <label>GDPR Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>