force-app/main/default/objects/Department__c/fields/GME_Country__c.field-meta.xml
<CustomField>
    <fullName>GME_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GME Country</label>
    <referenceTo>GMECountry__c</referenceTo>
    <relationshipLabel>Department</relationshipLabel>
    <relationshipName>Department</relationshipName>
    <type>Lookup</type>
</CustomField>