force-app/main/default/objects/Department__c/fields/InternalHourlyBillingRate__c.field-meta.xml
<CustomField>
    <fullName>InternalHourlyBillingRate__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 3rd Feb 2021
User Story: https://jira.hyundai-autoever.eu/browse/GD-2376
Purpose: To calculate how much we have to reimburse our service provider for performed tasks (labor + additional serivces (pick-up and delivery))</description>
    <label>Internal Hourly Billing Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>