force-app/main/default/objects/Department__c/fields/InvoiceNoPrefix__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNoPrefix__c</fullName>
    <label>Invoice No. Prefix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>