force-app/main/default/objects/Department__c/fields/InvoiceNoSuffix__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNoSuffix__c</fullName>
    <label>Invoice No. Suffix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>