force-app/main/default/objects/Department__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines Whether the department is active or closed</description>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>