force-app/main/default/objects/Department__c/fields/isTestDriveAvailable__c.field-meta.xml
<CustomField>
    <fullName>isTestDriveAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines Whether a test drive is possible
at the department</description>
    <label>is Test Drive Available</label>
    <type>Checkbox</type>
</CustomField>