force-app/main/default/objects/Department__c/fields/LastInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceID__c</fullName>
    <label>Last Invoice ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>