force-app/main/default/objects/Department__c/fields/LastInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>LastInvoiceNo__c</fullName>
    <label>Last Invoice No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>