force-app/main/default/objects/Department__c/fields/Legal_texts__c.field-meta.xml
<CustomField>
    <fullName>Legal_texts__c</fullName>
    <label>Legal Texts</label>
    <type>TextArea</type>
</CustomField>