force-app/main/default/objects/Department__c/fields/LegalCompanyDataPackage__c.field-meta.xml
<CustomField>
    <fullName>LegalCompanyDataPackage__c</fullName>
    <label>Legal Company Data Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>