force-app/main/default/objects/Department__c/fields/Major_Language__c.field-meta.xml
<CustomField>
    <fullName>Major_Language__c</fullName>
    <label>Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>