force-app/main/default/objects/Department__c/fields/NSC_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>NSC_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSC Sales Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Departments (Add NSC Sales Manager)</relationshipLabel>
    <relationshipName>Departments1</relationshipName>
    <type>Lookup</type>
</CustomField>