force-app/main/default/objects/Department__c/fields/Official_dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Official_dealer_Name__c</fullName>
    <label>Official Dealer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>