force-app/main/default/objects/Department__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 3rd Feb 2021
User Story: https://jira.hyundai-autoever.eu/browse/GD-2376
Purpose: Purpose not identified a the time of creating the field.</description>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>