force-app/main/default/objects/Department__c/fields/Part_Item__c.field-meta.xml
<CustomField>
    <fullName>Part_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 09/11/2020
User Story: Gd-1222
Purpose :- After Sales service available of Customer.</description>
    <label>Part Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Department</relationshipLabel>
    <relationshipName>Department</relationshipName>
    <type>Lookup</type>
</CustomField>