force-app/main/default/objects/Department__c/fields/PresidentName__c.field-meta.xml
<CustomField>
    <fullName>PresidentName__c</fullName>
    <label>President Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>