force-app/main/default/objects/Department__c/fields/ReferenceDealerCode__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDealerCode__c</fullName>
    <label>Reference Dealer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>