force-app/main/default/objects/Department__c/fields/ROM__c.field-meta.xml
<CustomField>
    <fullName>ROM__c</fullName>
    <label>ROM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>