force-app/main/default/objects/Department__c/fields/Sales_region__c.field-meta.xml
<CustomField>
    <fullName>Sales_region__c</fullName>
    <label>Sales Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>