force-app/main/default/objects/Department__c/fields/SalesCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCompanyCode__c</fullName>
    <description>Sales Company Code</description>
    <label>Sales Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>