force-app/main/default/objects/Department__c/fields/SAPKey__c.field-meta.xml
<CustomField>
    <fullName>SAPKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Confirmed by Hamid</description>
    <externalId>true</externalId>
    <label>SAP Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>