force-app/main/default/objects/Department__c/fields/StateRelation__c.field-meta.xml
<CustomField>
    <fullName>StateRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State (Relation)</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>