force-app/main/default/objects/Department__c/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <label>Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>