force-app/main/default/objects/Department__c/recordTypes/NSC_Department.recordType-meta.xml
<RecordType>
    <fullName>NSC_Department</fullName>
    <active>true</active>
    <label>NSC Department</label>
</RecordType>