force-app/main/default/objects/Department__c/recordTypes/Store.recordType-meta.xml
<RecordType>
    <fullName>Store</fullName>
    <active>true</active>
    <description>Created By: Reza Sarwari, User Story: https://jira.hyundai-autoever.eu/browse/GD-1285</description>
    <label>Store</label>
</RecordType>