force-app/main/default/objects/Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>SAPKey__c</columns>
    <columns>SalesCompanyCode__c</columns>
    <columns>Department_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>GME_Country__c</columns>
    <columns>Part_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>