force-app/main/default/objects/Department__c/listViews/All_Stores.listView-meta.xml
<ListView>
    <fullName>All_Stores</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Country__c</columns>
    <columns>GME_Country__c</columns>
    <columns>Part_Item__c</columns>
    <columns>SalesCompanyCode__c</columns>
    <columns>Department_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Department__c.Store</value>
    </filters>
    <label>All Stores</label>
</ListView>