force-app/main/default/objects/Department__c/listViews/AllServiceCenter.listView-meta.xml
<ListView>
    <fullName>AllServiceCenter</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>GME_Country__c</columns>
    <columns>Part_Item__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SalesCompanyCode__c</columns>
    <columns>Department_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Department__c.Service_Center</value>
    </filters>
    <label>All Service Centers</label>
</ListView>